--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Div containers</title>
 </head>
 <body>
-    <div class="olaro"></div>
+    <div class="olaro">
+
+<div class="div1"></div>
+<div class="div2"></div>
+    </div>
 </body>
 </html>
