--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Div containers</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="olaro">
 
-<div class="div1"></div>
+<div class="div1">
+<div class="div11"></div>
+<div class="div12"></div>
+
+</div>
 <div class="div2"></div>
     </div>
 </body>
