new style  shhets
new

--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Div containers</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="kayongo.css">
 </head>
 <body>
     <div class="olaro">
 
-<div class="div1">
+<div class="di">
 <div class="div11"></div>
 <div class="div12"></div>
 
 </div>
 <div class="div2"></div>
     </div>
+
+
+
 </body>
 </html>
