--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <div class="olaro">
 
-<div class="di">
-<div class="div11"></div>
-<div class="div12"></div>
+<div class="me1">
+<div class="me1.">
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, dolores.
+</div>
+<div class="me1.2"></div>
 
 </div>
 <div class="div2"></div>
