--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     <div class="olaro">
 
-<div class="div1"></div>
+<div class="div1">
+
+    <div class="div11"></div>
+    <div class="div12"></div>
+</div>
 
 
 <div class="div2"></div>
