--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 </div>
 
 
-<div class="div2"></div>
+<div class="div2">
+
+    <div class="div21"></div>
+    <div class="div22"></div>
+</div>
     </div>
 
 
