--- a/index.html
+++ b/index.html
@@ -26,10 +26,19 @@
 
 
     <div class="me1">
-<div class="me1.">
+<div class="me11">
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, dolores.
+    <div class="me13"></div>
+    <div class="me14"></div>
 </div>
-<div class="me1.2"></div>
+<div class="me12">
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur maiores laudantium velit harum quis totam rerum, a nemo sunt ut quo. Harum deserunt accusantium optio, tempore dignissimos cumque expedita quos delectus ducimus nemo illo illum excepturi ea aspernatur earum distinctio quasi quis blanditiis velit accusamus ipsa! Quidem provident blanditiis optio!</p>
+<div class="you">
+    <div class="one"></div>
+    <div class="one"></div>
+    <div class="one"></div>
+</div>
+</div>
 
 
 
