--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 </div>
     </div>
 
+    <div class="peter">
+        <div class="ola"></div>
+        <div class="ola2"></div>
+        <div class="ola3"></div>
+        <div class="ola4"></div>
+    </div>
+
 
     <div class="me1">
 <div class="me11">
